--- a/Quiz-App/Base.lproj/Main.storyboard
+++ b/Quiz-App/Base.lproj/Main.storyboard
@@ -170,7 +170,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Npg-aD-ROE" kind="show" id="KLq-vX-XQo"/>
+                                    <segue destination="Npg-aD-ROE" kind="show" identifier="updateQuestion" id="KLq-vX-XQo"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -184,7 +184,7 @@
                             <imageReference key="landscapeImage" image="pencil" catalog="system" symbolScale="large"/>
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <segue destination="GLT-Nt-hhk" kind="show" id="eeD-T9-UML"/>
+                                <segue destination="GLT-Nt-hhk" kind="show" identifier="addQuestion" id="eeD-T9-UML"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -193,10 +193,10 @@
             </objects>
             <point key="canvasLocation" x="1790" y="-35"/>
         </scene>
-        <!--Question Cell-->
+        <!--Question Cell Update View Controller-->
         <scene sceneID="7oa-E1-PBs">
             <objects>
-                <viewController id="Npg-aD-ROE" customClass="QuestionCell" sceneMemberID="viewController">
+                <viewController id="Npg-aD-ROE" customClass="QuestionCellUpdateViewController" customModule="Quiz_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lnZ-JL-GUB">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -246,14 +246,18 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="EXe-1o-5su">
-                        <barButtonItem key="rightBarButtonItem" title="Update" id="y7a-xu-AmX"/>
+                        <barButtonItem key="rightBarButtonItem" title="Update" id="y7a-xu-AmX">
+                            <connections>
+                                <action selector="updateQuestionClicked:" destination="Npg-aD-ROE" id="ii7-3h-Eth"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="correctAnswerText" destination="l7f-6p-b7F" id="vmC-03-GE8"/>
-                        <outlet property="incorrectAnswer1Text" destination="YK0-2c-VSW" id="B74-GB-UOK"/>
-                        <outlet property="incorrectAnswer2Text" destination="aLU-wH-Ofc" id="91X-p7-Mi2"/>
-                        <outlet property="incorrectAnswer3Text" destination="Sxx-qD-sto" id="5OO-F9-gr9"/>
-                        <outlet property="questionText" destination="ybt-Wr-LIQ" id="WUm-aH-AgG"/>
+                        <outlet property="correctAnswerText" destination="l7f-6p-b7F" id="8tx-uO-4ej"/>
+                        <outlet property="incorrectAnswer1Text" destination="YK0-2c-VSW" id="9tD-4w-fLw"/>
+                        <outlet property="incorrectAnswer2Text" destination="aLU-wH-Ofc" id="vve-Zi-80Q"/>
+                        <outlet property="incorrectAnswer3Text" destination="Sxx-qD-sto" id="peN-nn-y2F"/>
+                        <outlet property="questionText" destination="ybt-Wr-LIQ" id="2P0-7k-89v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J5V-F7-9Em" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
